pkg/kgateway/translator/gateway/testutils/inputs/traffic-policy/acl-merge.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  - name: test
  hostnames:
  - "test.com"
  rules:
  - name: rule0
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /route-0
  - name: rule1
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /route-1
---
# rule1 have no route-level ACL; only the merged gateway-level ACL applies.
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    test: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: test
